tests/derive_compile_fail/empty_tuple_struct_rejected.stderr
error: FromRow does not support empty structs
 --> tests/derive_compile_fail/empty_tuple_struct_rejected.rs:4:8
  |
4 | struct Bad();
  |        ^^^
